--- a/_data/students.yml
+++ b/_data/students.yml
@@ -67,7 +67,7 @@
   facebook: https://www.facebook.com/aditya.goel.311
   bio: I come here to build.
 
-  name: Gagan Ganapathy
+- name: Gagan Ganapathy
   github: https://github.com/CodHeK
   image: gagan.jpg
   facebook: https://www.facebook.com/GaganGanapathyAs
